Reduced spacing below navbar. Adjusted spacing of stop name

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -25,6 +25,10 @@
     }
   }
 
+  .navbar-fixed-top{
+    margin-bottom:3px;
+  }
+
   #map-canvas {
     height:300px;
     border: 1px solid #ccc;
