--- a/app/assets/stylesheets/stops.css.scss
+++ b/app/assets/stylesheets/stops.css.scss
@@ -30,9 +30,10 @@ span.desc {
 .stop-header {
   line-height: 20px;
   padding: 5px 10px 5px 10px;
+  margin-bottom:3px;
 
   img {
-    vertical-align: top;
+    vertical-align: bottom;
   }
 }
 
